--- a/index.html
+++ b/index.html
@@ -67,8 +67,12 @@
 
                     <tr>
                         <td>2022</td>
-                        <td>Currently working at <a href="https://datacenter.hello.global.ntt/en/about-us">NTT DataCenter</a> as Electrical Shift Engineer. </td>
+                        <td>Worked at <a href="https://datacenter.hello.global.ntt/en/about-us">NTT DataCenter</a> as Electrical Shift Engineer. </td>
                     </tr>
+                    <tr>
+                        <td>2023</td>
+                        <td>Currently working at <a href="https://www.ptcindia.com/about-us/">NTT DataCenter</a> as Electrical Shift Engineer. </td>
+                    </tr>                                                          
                 </tbody>
             </table>
         <hr>
