--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     </tr>
                     <tr>
                         <td>2023</td>
-                        <td>Currently working at <a href="https://www.ptcindia.com/about-us/">NTT DataCenter</a> as Electrical Shift Engineer. </td>
+                        <td>Currently working at <a href="https://www.ptcindia.com/about-us/">PTC India Ltd</a> as Junior Engineer. </td>
                     </tr>                                                          
                 </tbody>
             </table>
